--- a/trekants-beregner/package.json
+++ b/trekants-beregner/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.6.3",
+    "@types/p5": "^0.9.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "p5": "^1.3.1"
   }
 }
